# p3c-orch

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  build.sh  clean.sh  manuscript.tex  pyproject.toml
.github/workflows/: ci.yml
algorithms/: alg_link_prediction.tex  alg_p3clr.tex  alg_p3csr.tex
configs/: default.yaml  full_protocol.yaml
docs/: architecture.md  protocol.md
refs/: citation_audit.md  references.bib
reviews/: FINAL_REVIEW_SUMMARY.md  agent1_planner_review.md  agent2_related_work_review.md  agent3_math_algorithm_review.md  agent4_results_review.md  agent5_writing_review.md  agent6_reproducibility_review.md  agent7_final_audit.md  final_quality_checklist.md
scripts/: build_zip.py  citation_check.py  copy_assets.py  make_tables.py  verify_numbers.py
sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_system_model.tex  04_link_risk_prediction.tex  05_p3c_orch_framework.tex  06_algorithms.tex  07_experimental_setup.tex  08_results.tex  09_ablation_and_limitations.tex  10_conclusion.tex
src/p3c_orch/: __init__.py  analysis.py  channel.py  cli.py  config.py  constants.py  dataset.py  models.py  predictor.py  scheduler.py  simulation.py
tables/: ablation_results.tex  comparison_related_work.tex  external_baseline_comparison.tex  internal_variant_comparison.tex  main_results.tex  notation_table.tex  predictor_metrics.tex  predictor_weather.tex  regime_results.tex  significance_results.tex
tests/: __init__.py  factories.py  test_analysis.py  test_channel.py  test_cli.py  test_config.py  test_dataset.py  test_predictor.py  test_scheduler.py  test_simulation.py  test_training.py
